--- a/about/index.html
+++ b/about/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
+    <meta name="description" content="Hello 👋 I&#39;m a digital product designer based in Berlin 🇩🇪 I&#39;ve been working with digital products since 2011, and I&#39;m currently a Lead Product Designer at Lilt Inc.">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1695047415/Website/favicon_vhgcym.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/index.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js" integrity="sha512-5T245ZTH0m0RfONiFm2NF0zcYcmAuNzcGyPSQ18j8Bs5Pbfhp5HP1hosrR8XRt5M3kSRqzjNMYpm2+it/AUX/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <title>About Me - Karan Mhatre</title>
+    <script>
+        let msg = "%c Hi 👋! Email me@karanmhatre.com to connect."; 
+        let styles= [
+            'font-size: 12px', 
+            'font-family: monospace', 
+            'background: white', 
+            'display: inline-block', 
+            'color: black', 
+            'padding: 8px 19px', 
+            'border: 1px dashed;' 
+        ].join(';') 
+        console.log(msg, styles);
+    </script>
+
 </head>
 <body>
     <header>
@@ -262,17 +273,17 @@
 </script> -->
 <section class="main-container">
     <div class="image-container-small ">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/pic_qrr2ye.jpg" alt="" srcset="" class="only-mobile">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/pic_qrr2ye.webp" alt="Karan Mhatre" class="only-mobile">
     </div>
     
     <div class="image-container-small">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_2000/q_auto/Frame_48095782_fe2zvo.jpg" alt="" srcset="" class="only-desktop">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1800/q_auto/Frame_48095782_fe2zvo.webp" alt="Karan Mhatre" class="only-desktop">
     </div>
     <div class="sub-section">
         <h3>About me</h3>
-        <p>I'm a digital product designer from India. Through my career I have worn many hats - a front-end developer, a product manager, and now a product designer. My versatility in skill-sets gives me a great perspective when it comes to product thinking and problem solving.</p>
+        <p>I'm a digital product designer from India. Throughout my career, I have worn many hats - a front-end developer, a product manager, and now a product designer. My versatility in skill sets gives me a great perspective when it comes to product thinking and problem-solving.</p>
         <p>I did my graduation in Computer Engineering, and over time moved to designing digital user experiences.</p>
-        <p>I also love to paint. And recently I've started bouldering.</p>
+        <p>I enjoy painting, sketching, and surfing.</p>
     </div>
     <div class="sub-section">
         <h3>Career Summary</h3>
@@ -296,6 +307,7 @@
             <li>(2017) exhibited my artwork (zines)  with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
             <li>(2019) exhibited my artwork (zines) with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
             <li>(2018) I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
+            <li>(2018) A <a href="https://www.mid-day.com/mumbai-guide/famous-personalities/article/International-Zine-Month-Meet-Mumbais-brightest-zine-makers-19595176" target="_blank">newspaper article</a> about my zines</li>
             <li>(2020) Mentored design students on <a href="https://mentorcruise.com/" target="_blank">MentorCruise.</a></li>
             <li>(2021) Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
         </ul>
@@ -305,14 +317,14 @@
     <footer>
         <div class="social">
             <ul>
-                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt=""></a></li>
-                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
-                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
-                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
+                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
+                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
             </ul>
         </div>
         <p id="credit">
-            I built this website using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
+            Website built using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
