--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="I have 9+ years of experience working with digital products, and I&#39;m currently working as a Lead Product Designer at Byjus.">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
+    <meta name="description" content="Hello 👋 I&#39;m a digital product designer based in Berlin 🇩🇪 I&#39;ve been working with digital products since 2011, and I&#39;m currently a Lead Product Designer at Lilt Inc.">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1695047415/Website/favicon_vhgcym.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/index.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js" integrity="sha512-5T245ZTH0m0RfONiFm2NF0zcYcmAuNzcGyPSQ18j8Bs5Pbfhp5HP1hosrR8XRt5M3kSRqzjNMYpm2+it/AUX/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    <title>Karan Mhatre - UX Product Designer, Berlin</title>
+    <title>Karan Mhatre - Product Designer, Berlin</title>
+    <script>
+        let msg = "%c Hi 👋! Email me@karanmhatre.com to connect."; 
+        let styles= [
+            'font-size: 12px', 
+            'font-family: monospace', 
+            'background: white', 
+            'display: inline-block', 
+            'color: black', 
+            'padding: 8px 19px', 
+            'border: 1px dashed;' 
+        ].join(';') 
+        console.log(msg, styles);
+    </script>
+
 </head>
 <body>
     <header>
@@ -38,7 +49,7 @@
     </div>    
     <div class="content">
         <h2>Hello 👋 I'm a digital product designer based in Berlin 🇩🇪</h2>
-        <p>I've been working with digital products for over 10 years, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
+        <p>I've been working with digital products since 2011, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
         <a href="/about" class="button">More about me</a>
     </div>
 </section>
@@ -83,18 +94,18 @@
             <p>Are you tired of stakeholders underestimating the requirements...</p>
         </div> -->
         <div>
-            <p>Jan 2022 - Art Project</p>
-            <h3><a href="/art/explorations-in-code-and-audio">Experiments in Audio & Code</a></h3>
+            <p>Jan 2022</p>
+            <h3><a href="/explorations-in-code-and-audio">Audio & Code</a></h3>
             <p>A collection of audio related experiments made using p5js.</p>
         </div>
         <div>
-            <p>Jan 2022 - Art Project</p>
-            <h3><a href="/art/explorations-in-code-and-type/">Experiments with Type & Code</a></h3>
+            <p>Jan 2022</p>
+            <h3><a href="/explorations-in-code-and-type/">Type & Code</a></h3>
             <p>A collection of text and typography related experiments made using p5js.</p>
         </div>
         <div>
-            <p>Jan 2022 - Art Project</p>
-            <h3><a href="/art/exploring-instructional-art/">Instructional Art</a></h3>
+            <p>Jan 2022</p>
+            <h3><a href="/exploring-instructional-art/">Instructional Art</a></h3>
             <p>The root of Instructional Art is the question - Can an idea be a work of art?</p>
         </div>
     </div>
@@ -160,14 +171,14 @@
     <footer>
         <div class="social">
             <ul>
-                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt=""></a></li>
-                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
-                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
-                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
+                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
+                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
             </ul>
         </div>
         <p id="credit">
-            I built this website using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
+            Website built using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
