--- a/art/index.html
+++ b/art/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="robots" content="index, follow" />
     <meta name="description" content="">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1695047415/Website/favicon_vhgcym.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/index.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js" integrity="sha512-5T245ZTH0m0RfONiFm2NF0zcYcmAuNzcGyPSQ18j8Bs5Pbfhp5HP1hosrR8XRt5M3kSRqzjNMYpm2+it/AUX/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
     <title>Art - Karan Mhatre</title>
+    <script>
+        let msg = "%c Hi 👋! Email me@karanmhatre.com to connect."; 
+        let styles= [
+            'font-size: 12px', 
+            'font-family: monospace', 
+            'background: white', 
+            'display: inline-block', 
+            'color: black', 
+            'padding: 8px 19px', 
+            'border: 1px dashed;' 
+        ].join(';') 
+        console.log(msg, styles);
+    </script>
+
 </head>
 <body>
     <header>
@@ -35,52 +46,52 @@
     <div class="grid-projects">
         <ul>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/15_ojvoqx.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/15_ojvoqx.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/20_yog95s.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/20_yog95s.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/16_few9n4.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/16_few9n4.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/19_sjgkcd.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/19_sjgkcd.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/18_kghyis.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/18_kghyis.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/8_akez7j.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/8_akez7j.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/17_p5okgl.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/17_p5okgl.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/11_tfgpsg.jpg" alt="" srcset=""></a>
-            </li>
-
-            <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/13_rb2rd5.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/11_tfgpsg.webp" alt="" srcset=""></a>
             </li>
 
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/1_qdahks.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/13_rb2rd5.webp" alt="" srcset=""></a>
+            </li>
+
+            <li>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/1_qdahks.webp" alt="" srcset=""></a>
             </li>
             
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/14_cjja9c.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/14_cjja9c.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/7_lfakua.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/7_lfakua.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/6_v9ldl0.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/6_v9ldl0.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/e_grayscale/Karan%20Illustrations/3_csfrvp.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/e_grayscale/Karan%20Illustrations/3_csfrvp.webp" alt="" srcset=""></a>
             </li>
             <li>
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/Karan%20Illustrations/2_fi4lhk.jpg" alt="" srcset=""></a>
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_600/q_auto/Karan%20Illustrations/2_fi4lhk.webp" alt="" srcset=""></a>
             </li>
         </ul>
     </div>
@@ -89,14 +100,14 @@
     <footer>
         <div class="social">
             <ul>
-                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt=""></a></li>
-                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt=""></a></li>
-                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt=""></a></li>
-                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt=""></a></li>
+                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
+                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
             </ul>
         </div>
         <p id="credit">
-            I built this website using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
+            Website built using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
