--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1695047415/Website/favicon_vhgcym.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/css/global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="/css/global.css"></noscript>
+
+    <link rel="preload" href="/css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="/css/index.css"></noscript>
+
     <title>Karan Mhatre - Product Designer, Berlin</title>
     <script>
         let msg = "%c Hi 👋! Email me@karanmhatre.com to connect."; 
@@ -56,18 +61,16 @@
 <section class="listing-section">
     <div class="listing-header">
         <h2>Case Studies</h2>
-        <p>An exploration of coding projects, with no real purpose in mind other than creating something.</p>
+        <p>A collection of some of the interesting projects that I could a chance to be a part of in the last few years.</p>
     </div>
     <div class="item-list">
         <div>
-            <p>2021 - UX Design - WhiteHatJR</p>
             <h3><a href="/improved-video-classroom/">Making education more accessible with group online classes</a></h3>
-            <p>Realigned an existing product experience to help the company enter a new market.</p>
+            <p>(2022 - WhitehatJR) Realigned an existing product experience to help the company enter a new market.</p>
         </div>
         <div>
-            <p>2019 - UX Design and Product - GOQii</p>
             <h3><a href="/designing-live-health-and-fitness-classes/">Crafting an Interactive Video Health Experience</a></h3>
-            <p>Crafted a live health video experience that improved time spent on app by 35% in 6 months.</p>
+            <p>(2019 - GOQii) Crafted a live health video experience that improved time spent on app by 35% in 6 months.</p>
         </div>
         <!-- <div>
             <p>2015 - User Research - Practo</p>
@@ -94,17 +97,14 @@
             <p>Are you tired of stakeholders underestimating the requirements...</p>
         </div> -->
         <div>
-            <p>Jan 2022</p>
             <h3><a href="/explorations-in-code-and-audio">Audio & Code</a></h3>
             <p>A collection of audio related experiments made using p5js.</p>
         </div>
         <div>
-            <p>Jan 2022</p>
             <h3><a href="/explorations-in-code-and-type/">Type & Code</a></h3>
             <p>A collection of text and typography related experiments made using p5js.</p>
         </div>
         <div>
-            <p>Jan 2022</p>
             <h3><a href="/exploring-instructional-art/">Instructional Art</a></h3>
             <p>The root of Instructional Art is the question - Can an idea be a work of art?</p>
         </div>
