--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section class="hero">
     <div class="image">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/hero-image_k4ifka.jpg" alt="Painting by Karan Mhatre">
-        <span>(2020) Power - 100x100 Acrylic on Canvas</span>
+        <span class="only-desktop">(2020) Power - 100x100 Acrylic on Canvas</span>
     </div>    
     <div class="content">
         <h2>Hello 👋 I'm a digital product designer based in Berlin 🇩🇪</h2>
@@ -171,10 +171,10 @@
     <footer>
         <div class="social">
             <ul>
-                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
-                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
-                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
-                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
+                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
+                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
             </ul>
         </div>
         <p id="credit">
