--- a/explorations-in-code-and-audio/index.html
+++ b/explorations-in-code-and-audio/index.html
@@ -225,10 +225,10 @@
     <footer>
         <div class="social">
             <ul>
-                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
-                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
-                <li><a href="https://github.com/karanmhatre1" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
-                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
+                <li><a href="https://instagram.com/onesquarekaran" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/instagram_xunhmm.svg" alt="Karan Mhatre Instagram"></a></li>
+                <li><a href="https://linkedin.com/in/karanmhatre/" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/linkedin_awygii.svg" alt="Karan Mhatre Linkedin"></a></li>
+                <li><a href="https://github.com/karanmhatre1" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/github_sqw2he.svg" alt="Karan Mahtre GitHub"></a></li>
+                <li><a href="https://karanmhatre.medium.com/" target="_blank"><img width="24px" height="24px" src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1623341262/Website/medium_en6czv.svg" alt="Karan Mhatre Medium"></a></li>
             </ul>
         </div>
         <p id="credit">
