--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
 <section class="hero">
     <div class="image">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_1000/q_auto/hero-image_k4ifka.jpg" alt="Painting by Karan Mhatre">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/w_720/q_auto/hero-image_k4ifka.webp" alt="Painting by Karan Mhatre">
         <span class="only-desktop">(2020) Power - 100x100 Acrylic on Canvas</span>
     </div>    
     <div class="content">
@@ -61,7 +61,7 @@
 <section class="listing-section">
     <div class="listing-header">
         <h2>Case Studies</h2>
-        <p>A collection of some of the interesting projects that I could a chance to be a part of in the last few years.</p>
+        <p>A collection of some of the interesting projects that I was a part of in the last few years.</p>
     </div>
     <div class="item-list">
         <div>
